@@ -35,16 +35,21 @@
 
 package java.util.concurrent;
 
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.VarHandle;
 import java.util.AbstractQueue;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Iterator;
 import java.util.NoSuchElementException;
+import java.util.Objects;
 import java.util.Queue;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.locks.LockSupport;
 import java.util.Spliterator;
 import java.util.Spliterators;
+import java.util.concurrent.locks.LockSupport;
+import java.util.concurrent.ForkJoinWorkerThread;
 import java.util.function.Consumer;
+import java.util.function.Predicate;
 
 /**
  * An unbounded {@link TransferQueue} based on linked nodes.
@@ -59,16 +64,15 @@ import java.util.function.Consumer;
  * asynchronous nature of these queues, determining the current number
  * of elements requires a traversal of the elements, and so may report
  * inaccurate results if this collection is modified during traversal.
- * Additionally, the bulk operations {@code addAll},
- * {@code removeAll}, {@code retainAll}, {@code containsAll},
- * {@code equals}, and {@code toArray} are <em>not</em> guaranteed
- * to be performed atomically. For example, an iterator operating
- * concurrently with an {@code addAll} operation might view only some
- * of the added elements.
  *
- * <p>This class and its iterator implement all of the
- * <em>optional</em> methods of the {@link Collection} and {@link
- * Iterator} interfaces.
+ * <p>Bulk operations that add, remove, or examine multiple elements,
+ * such as {@link #addAll}, {@link #removeIf} or {@link #forEach},
+ * are <em>not</em> guaranteed to be performed atomically.
+ * For example, a {@code forEach} traversal concurrent with an {@code
+ * addAll} operation might observe only some of the added elements.
+ *
+ * <p>This class and its iterator implement all of the <em>optional</em>
+ * methods of the {@link Collection} and {@link Iterator} interfaces.
  *
  * <p>Memory consistency effects: As with other concurrent
  * collections, actions in a thread prior to placing an object into a
@@ -78,12 +82,12 @@ import java.util.function.Consumer;
  * the {@code LinkedTransferQueue} in another thread.
  *
  * <p>This class is a member of the
- * <a href="{@docRoot}/../technotes/guides/collections/index.html">
+ * <a href="{@docRoot}/java.base/java/util/package-summary.html#CollectionsFramework">
  * Java Collections Framework</a>.
  *
  * @since 1.7
  * @author Doug Lea
- * @param <E> the type of elements held in this collection
+ * @param <E> the type of elements held in this queue
  */
 public class LinkedTransferQueue<E> extends AbstractQueue<E>
     implements TransferQueue<E>, java.io.Serializable {
@@ -93,8 +97,8 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      * *** Overview of Dual Queues with Slack ***
      *
      * Dual Queues, introduced by Scherer and Scott
-     * (http://www.cs.rice.edu/~wns1/papers/2004-DISC-DDS.pdf) are
-     * (linked) queues in which nodes may represent either data or
+     * (http://www.cs.rochester.edu/~scott/papers/2004_DISC_dual_DS.pdf)
+     * are (linked) queues in which nodes may represent either data or
      * requests.  When a thread tries to enqueue a data node, but
      * encounters a request node, it instead "matches" and removes it;
      * and vice versa for enqueuing requests. Blocking Dual Queues
@@ -104,11 +108,15 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      * http://www.cs.rochester.edu/u/scott/papers/2009_Scherer_CACM_SSQ.pdf)
      * additionally arrange that threads enqueuing unmatched data also
      * block.  Dual Transfer Queues support all of these modes, as
-     * dictated by callers.
+     * dictated by callers. All enqueue/dequeue operations can be
+     * handled by a single method (here, "xfer") with parameters
+     * indicating whether to act as some form of offer, put, poll,
+     * take, or transfer (each possibly with timeout), as described
+     * below.
      *
      * A FIFO dual queue may be implemented using a variation of the
      * Michael & Scott (M&S) lock-free queue algorithm
-     * (http://www.cs.rochester.edu/u/scott/papers/1996_PODC_queues.pdf).
+     * (http://www.cs.rochester.edu/~scott/papers/1996_PODC_queues.pdf).
      * It maintains two pointer fields, "head", pointing to a
      * (matched) node that in turn points to the first actual
      * (unmatched) queue node (or null if empty); and "tail" that
@@ -123,45 +131,33 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      *
      * The M&S queue algorithm is known to be prone to scalability and
      * overhead limitations when maintaining (via CAS) these head and
-     * tail pointers. This has led to the development of
-     * contention-reducing variants such as elimination arrays (see
-     * Moir et al http://portal.acm.org/citation.cfm?id=1074013) and
-     * optimistic back pointers (see Ladan-Mozes & Shavit
-     * http://people.csail.mit.edu/edya/publications/OptimisticFIFOQueue-journal.pdf).
-     * However, the nature of dual queues enables a simpler tactic for
-     * improving M&S-style implementations when dual-ness is needed.
+     * tail pointers. To address these, dual queues with slack differ
+     * from plain M&S dual queues by virtue of only sometimes updating
+     * head or tail pointers when matching, appending, or even
+     * traversing nodes.
      *
      * In a dual queue, each node must atomically maintain its match
-     * status. While there are other possible variants, we implement
-     * this here as: for a data-mode node, matching entails CASing an
-     * "item" field from a non-null data value to null upon match, and
-     * vice-versa for request nodes, CASing from null to a data
-     * value. (Note that the linearization properties of this style of
-     * queue are easy to verify -- elements are made available by
-     * linking, and unavailable by matching.) Compared to plain M&S
-     * queues, this property of dual queues requires one additional
-     * successful atomic operation per enq/deq pair. But it also
-     * enables lower cost variants of queue maintenance mechanics. (A
-     * variation of this idea applies even for non-dual queues that
-     * support deletion of interior elements, such as
-     * j.u.c.ConcurrentLinkedQueue.)
+     * status. Matching entails CASing an "item" field from a non-null
+     * data value to null upon match, and vice-versa for request
+     * nodes, CASing from null to a data value.  (To reduce the need
+     * for re-reads, we use the compareAndExchange forms of CAS for
+     * pointer updates, that provide the current value to continue
+     * with on failure.)  Note that the linearization properties of
+     * this style of queue are easy to verify -- elements are made
+     * available by linking, and unavailable by matching. Compared to
+     * plain M&S queues, this property of dual queues requires one
+     * additional successful atomic operation per enq/deq pair. But it
+     * also enables lower cost variants of queue maintenance
+     * mechanics.
      *
-     * Once a node is matched, its match status can never again
-     * change.  We may thus arrange that the linked list of them
-     * contain a prefix of zero or more matched nodes, followed by a
-     * suffix of zero or more unmatched nodes. (Note that we allow
-     * both the prefix and suffix to be zero length, which in turn
-     * means that we do not use a dummy header.)  If we were not
-     * concerned with either time or space efficiency, we could
-     * correctly perform enqueue and dequeue operations by traversing
-     * from a pointer to the initial node; CASing the item of the
-     * first unmatched node on match and CASing the next field of the
-     * trailing node on appends. (Plus some special-casing when
-     * initially empty).  While this would be a terrible idea in
-     * itself, it does have the benefit of not requiring ANY atomic
-     * updates on head/tail fields.
+     * Once a node is matched, it is no longer live -- its match
+     * status can never again change.  We may thus arrange that the
+     * linked list of them contain a prefix of zero or more dead
+     * nodes, followed by a suffix of zero or more live nodes. Note
+     * that we allow both the prefix and suffix to be zero length,
+     * which in turn means that we do not require a dummy header.
      *
-     * We introduce here an approach that lies between the extremes of
+     * We use here an approach that lies between the extremes of
      * never versus always updating queue (head and tail) pointers.
      * This offers a tradeoff between sometimes requiring extra
      * traversal steps to locate the first and/or last unmatched
@@ -176,175 +172,43 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      *
      * The best value for this "slack" (the targeted maximum distance
      * between the value of "head" and the first unmatched node, and
-     * similarly for "tail") is an empirical matter. We have found
-     * that using very small constants in the range of 1-3 work best
-     * over a range of platforms. Larger values introduce increasing
-     * costs of cache misses and risks of long traversal chains, while
-     * smaller values increase CAS contention and overhead.
-     *
-     * Dual queues with slack differ from plain M&S dual queues by
-     * virtue of only sometimes updating head or tail pointers when
-     * matching, appending, or even traversing nodes; in order to
-     * maintain a targeted slack.  The idea of "sometimes" may be
-     * operationalized in several ways. The simplest is to use a
-     * per-operation counter incremented on each traversal step, and
-     * to try (via CAS) to update the associated queue pointer
-     * whenever the count exceeds a threshold. Another, that requires
-     * more overhead, is to use random number generators to update
-     * with a given probability per traversal step.
-     *
-     * In any strategy along these lines, because CASes updating
-     * fields may fail, the actual slack may exceed targeted
-     * slack. However, they may be retried at any time to maintain
-     * targets.  Even when using very small slack values, this
-     * approach works well for dual queues because it allows all
-     * operations up to the point of matching or appending an item
-     * (hence potentially allowing progress by another thread) to be
-     * read-only, thus not introducing any further contention. As
-     * described below, we implement this by performing slack
-     * maintenance retries only after these points.
-     *
-     * As an accompaniment to such techniques, traversal overhead can
-     * be further reduced without increasing contention of head
-     * pointer updates: Threads may sometimes shortcut the "next" link
-     * path from the current "head" node to be closer to the currently
-     * known first unmatched node, and similarly for tail. Again, this
-     * may be triggered with using thresholds or randomization.
+     * similarly for "tail") is an empirical matter. Larger values
+     * introduce increasing costs of cache misses and risks of long
+     * traversal chains and out-of-order updates, while smaller values
+     * increase CAS contention and overhead. Using the smallest
+     * non-zero value of one is both simple and empirically a good
+     * choice in most applicatkions.  The slack value is hard-wired: a
+     * path greater than one is usually implemented by checking
+     * equality of traversal pointers.  Because CASes updating fields
+     * attempting to do so may stall, the writes may appear out of
+     * order (an older CAS from the same head or tail may execute
+     * after a newer one), the actual slack may exceed targeted
+     * slack. To reduce impact, other threads may help update by
+     * unsplicing dead nodes while traversing.
      *
      * These ideas must be further extended to avoid unbounded amounts
      * of costly-to-reclaim garbage caused by the sequential "next"
      * links of nodes starting at old forgotten head nodes: As first
      * described in detail by Boehm
-     * (http://portal.acm.org/citation.cfm?doid=503272.503282) if a GC
-     * delays noticing that any arbitrarily old node has become
+     * (http://portal.acm.org/citation.cfm?doid=503272.503282), if a
+     * GC delays noticing that any arbitrarily old node has become
      * garbage, all newer dead nodes will also be unreclaimed.
      * (Similar issues arise in non-GC environments.)  To cope with
-     * this in our implementation, upon CASing to advance the head
-     * pointer, we set the "next" link of the previous head to point
-     * only to itself; thus limiting the length of connected dead lists.
-     * (We also take similar care to wipe out possibly garbage
-     * retaining values held in other Node fields.)  However, doing so
-     * adds some further complexity to traversal: If any "next"
-     * pointer links to itself, it indicates that the current thread
-     * has lagged behind a head-update, and so the traversal must
-     * continue from the "head".  Traversals trying to find the
-     * current tail starting from "tail" may also encounter
-     * self-links, in which case they also continue at "head".
+     * this in our implementation, upon advancing the head pointer, we
+     * set the "next" link of the previous head to point only to
+     * itself; thus limiting the length of chains of dead nodes.  (We
+     * also take similar care to wipe out possibly garbage retaining
+     * values held in other node fields.) This is easy to accommodate
+     * in the primary xfer method, but adds a lot of complexity to
+     * Collection operations including traversal; mainly because if
+     * any "next" pointer links to itself, the current thread has
+     * lagged behind a head-update, and so must restart.
      *
-     * It is tempting in slack-based scheme to not even use CAS for
-     * updates (similarly to Ladan-Mozes & Shavit). However, this
-     * cannot be done for head updates under the above link-forgetting
-     * mechanics because an update may leave head at a detached node.
-     * And while direct writes are possible for tail updates, they
-     * increase the risk of long retraversals, and hence long garbage
-     * chains, which can be much more costly than is worthwhile
-     * considering that the cost difference of performing a CAS vs
-     * write is smaller when they are not triggered on each operation
-     * (especially considering that writes and CASes equally require
-     * additional GC bookkeeping ("write barriers") that are sometimes
-     * more costly than the writes themselves because of contention).
+     * *** Blocking ***
      *
-     * *** Overview of implementation ***
-     *
-     * We use a threshold-based approach to updates, with a slack
-     * threshold of two -- that is, we update head/tail when the
-     * current pointer appears to be two or more steps away from the
-     * first/last node. The slack value is hard-wired: a path greater
-     * than one is naturally implemented by checking equality of
-     * traversal pointers except when the list has only one element,
-     * in which case we keep slack threshold at one. Avoiding tracking
-     * explicit counts across method calls slightly simplifies an
-     * already-messy implementation. Using randomization would
-     * probably work better if there were a low-quality dirt-cheap
-     * per-thread one available, but even ThreadLocalRandom is too
-     * heavy for these purposes.
-     *
-     * With such a small slack threshold value, it is not worthwhile
-     * to augment this with path short-circuiting (i.e., unsplicing
-     * interior nodes) except in the case of cancellation/removal (see
-     * below).
-     *
-     * We allow both the head and tail fields to be null before any
-     * nodes are enqueued; initializing upon first append.  This
-     * simplifies some other logic, as well as providing more
-     * efficient explicit control paths instead of letting JVMs insert
-     * implicit NullPointerExceptions when they are null.  While not
-     * currently fully implemented, we also leave open the possibility
-     * of re-nulling these fields when empty (which is complicated to
-     * arrange, for little benefit.)
-     *
-     * All enqueue/dequeue operations are handled by the single method
-     * "xfer" with parameters indicating whether to act as some form
-     * of offer, put, poll, take, or transfer (each possibly with
-     * timeout). The relative complexity of using one monolithic
-     * method outweighs the code bulk and maintenance problems of
-     * using separate methods for each case.
-     *
-     * Operation consists of up to three phases. The first is
-     * implemented within method xfer, the second in tryAppend, and
-     * the third in method awaitMatch.
-     *
-     * 1. Try to match an existing node
-     *
-     *    Starting at head, skip already-matched nodes until finding
-     *    an unmatched node of opposite mode, if one exists, in which
-     *    case matching it and returning, also if necessary updating
-     *    head to one past the matched node (or the node itself if the
-     *    list has no other unmatched nodes). If the CAS misses, then
-     *    a loop retries advancing head by two steps until either
-     *    success or the slack is at most two. By requiring that each
-     *    attempt advances head by two (if applicable), we ensure that
-     *    the slack does not grow without bound. Traversals also check
-     *    if the initial head is now off-list, in which case they
-     *    start at the new head.
-     *
-     *    If no candidates are found and the call was untimed
-     *    poll/offer, (argument "how" is NOW) return.
-     *
-     * 2. Try to append a new node (method tryAppend)
-     *
-     *    Starting at current tail pointer, find the actual last node
-     *    and try to append a new node (or if head was null, establish
-     *    the first node). Nodes can be appended only if their
-     *    predecessors are either already matched or are of the same
-     *    mode. If we detect otherwise, then a new node with opposite
-     *    mode must have been appended during traversal, so we must
-     *    restart at phase 1. The traversal and update steps are
-     *    otherwise similar to phase 1: Retrying upon CAS misses and
-     *    checking for staleness.  In particular, if a self-link is
-     *    encountered, then we can safely jump to a node on the list
-     *    by continuing the traversal at current head.
-     *
-     *    On successful append, if the call was ASYNC, return.
-     *
-     * 3. Await match or cancellation (method awaitMatch)
-     *
-     *    Wait for another thread to match node; instead cancelling if
-     *    the current thread was interrupted or the wait timed out. On
-     *    multiprocessors, we use front-of-queue spinning: If a node
-     *    appears to be the first unmatched node in the queue, it
-     *    spins a bit before blocking. In either case, before blocking
-     *    it tries to unsplice any nodes between the current "head"
-     *    and the first unmatched node.
-     *
-     *    Front-of-queue spinning vastly improves performance of
-     *    heavily contended queues. And so long as it is relatively
-     *    brief and "quiet", spinning does not much impact performance
-     *    of less-contended queues.  During spins threads check their
-     *    interrupt status and generate a thread-local random number
-     *    to decide to occasionally perform a Thread.yield. While
-     *    yield has underdefined specs, we assume that it might help,
-     *    and will not hurt, in limiting impact of spinning on busy
-     *    systems.  We also use smaller (1/2) spins for nodes that are
-     *    not known to be front but whose predecessors have not
-     *    blocked -- these "chained" spins avoid artifacts of
-     *    front-of-queue rules which otherwise lead to alternating
-     *    nodes spinning vs blocking. Further, front threads that
-     *    represent phase changes (from data to request node or vice
-     *    versa) compared to their predecessors receive additional
-     *    chained spins, reflecting longer paths typically required to
-     *    unblock threads during phase changes.
-     *
+     * The DualNode class is shared with class SynchronousQueue. It
+     * houses method await, which is used for all blocking control, as
+     * described below in DualNode internal documentation.
      *
      * ** Unlinking removed interior nodes **
      *
@@ -360,23 +224,21 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      * unreachable in this way: (1) If s is the trailing node of list
      * (i.e., with null next), then it is pinned as the target node
      * for appends, so can only be removed later after other nodes are
-     * appended. (2) We cannot necessarily unlink s given a
-     * predecessor node that is matched (including the case of being
-     * cancelled): the predecessor may already be unspliced, in which
-     * case some previous reachable node may still point to s.
-     * (For further explanation see Herlihy & Shavit "The Art of
-     * Multiprocessor Programming" chapter 9).  Although, in both
-     * cases, we can rule out the need for further action if either s
-     * or its predecessor are (or can be made to be) at, or fall off
-     * from, the head of list.
+     * appended. (2) Unless we know it is already off-list, we cannot
+     * necessarily unlink s given a predecessor node that is matched
+     * (including the case of being cancelled): the predecessor may
+     * already be unspliced, in which case some previous reachable
+     * node may still point to s.  (For further explanation see
+     * Herlihy & Shavit "The Art of Multiprocessor Programming"
+     * chapter 9).
      *
      * Without taking these into account, it would be possible for an
-     * unbounded number of supposedly removed nodes to remain
-     * reachable.  Situations leading to such buildup are uncommon but
-     * can occur in practice; for example when a series of short timed
-     * calls to poll repeatedly time out but never otherwise fall off
-     * the list because of an untimed call to take at the front of the
-     * queue.
+     * unbounded number of supposedly removed nodes to remain reachable.
+     * Situations leading to such buildup are uncommon but can occur
+     * in practice; for example when a series of short timed calls to
+     * poll repeatedly time out at the trailing node but otherwise
+     * never fall off the list because of an untimed call to take() at
+     * the front of the queue.
      *
      * When these cases arise, rather than always retraversing the
      * entire list to find an actual predecessor to unlink (which
@@ -389,429 +251,492 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      * We perform sweeps by the thread hitting threshold (rather than
      * background threads or by spreading work to other threads)
      * because in the main contexts in which removal occurs, the
-     * caller is already timed-out, cancelled, or performing a
-     * potentially O(n) operation (e.g. remove(x)), none of which are
-     * time-critical enough to warrant the overhead that alternatives
-     * would impose on other threads.
+     * caller is timed-out or cancelled, which are not time-critical
+     * enough to warrant the overhead that alternatives would impose
+     * on other threads.
      *
      * Because the sweepVotes estimate is conservative, and because
      * nodes become unlinked "naturally" as they fall off the head of
      * the queue, and because we allow votes to accumulate even while
      * sweeps are in progress, there are typically significantly fewer
-     * such nodes than estimated.  Choice of a threshold value
-     * balances the likelihood of wasted effort and contention, versus
-     * providing a worst-case bound on retention of interior nodes in
-     * quiescent queues. The value defined below was chosen
-     * empirically to balance these under various timeout scenarios.
+     * such nodes than estimated.
      *
      * Note that we cannot self-link unlinked interior nodes during
      * sweeps. However, the associated garbage chains terminate when
      * some successor ultimately falls off the head of the list and is
      * self-linked.
+     *
+     * *** Revision notes ***
+     *
+     * This version differs from previous releases as follows:
+     *
+     * * Class DualNode replaces Qnode, with fields and methods
+     *   that apply to any match-based dual data structure, and now
+     *   usable in other j.u.c classes. in particular, SynchronousQueue.
+     * * Blocking control (in class DualNode) accommodates
+     *   VirtualThreads and (perhaps virtualized) uniprocessors.
+     * * All fields of this class (LinkedTransferQueue) are
+     *   default-initializable (to null), allowing further extension
+     *   (in particular, SynchronousQueue.Transferer)
+     * * Head and tail fields are lazily initialized rather than set
+     *   to a dummy node, while also reducing retries under heavy
+     *   contention and misorderings, and relaxing some accesses,
+     *   requiring accommodation in many places (as well as
+     *   adjustments in WhiteBox tests).
      */
-
-    /** True if on multiprocessor */
-    private static final boolean MP =
-        Runtime.getRuntime().availableProcessors() > 1;
 
     /**
-     * The number of times to spin (with randomly interspersed calls
-     * to Thread.yield) on multiprocessor before blocking when a node
-     * is apparently the first waiter in the queue.  See above for
-     * explanation. Must be a power of two. The value is empirically
-     * derived -- it works pretty well across a variety of processors,
-     * numbers of CPUs, and OSes.
+     * Node for linked dual data structures. Uses type Object, not E,
+     * for items to allow cancellation and forgetting after use. Only
+     * field "item" is declared volatile (with bypasses for
+     * pre-publication and post-match writes), although field "next"
+     * is also CAS-able. Other accesses are constrained by context
+     * (including dependent chains of next's headed by a volatile
+     * read).
+     *
+     * This class also arranges blocking while awaiting matches.
+     * Control of blocking (and thread scheduling in general) for
+     * possibly-synchronous queues (and channels etc constructed
+     * from them) must straddle two extremes: If there are too few
+     * underlying cores for a fulfilling party to continue, then
+     * the caller must park to cause a context switch. On the
+     * other hand, if the queue is busy with approximately the
+     * same number of independent producers and consumers, then
+     * that context switch may cause an order-of-magnitude
+     * slowdown. Many cases are somewhere in-between, in which
+     * case threads should try spinning and then give up and
+     * block. We deal with this as follows:
+     *
+     * 1. Callers to method await indicate eligibility for
+     * spinning when the node is either the only waiting node, or
+     * the next matchable node is still spinning.  Otherwise, the
+     * caller may block (almost) immediately.
+     *
+     * 2. Even if eligible to spin, a caller blocks anyway in two
+     * cases where it is normally best: If the thread isVirtual,
+     * or the system is a uniprocessor. Uniprocessor status can
+     * vary over time (due to virtualization at other system
+     * levels), but checking Runtime availableProcessors can be
+     * slow and may itself acquire blocking locks, so we only
+     * occasionally (using ThreadLocalRandom) update when an
+     * otherwise-eligible spin elapses.
+     *
+     * 3. When enabled, spins should be long enough to cover
+     * bookeeping overhead of almost-immediate fulfillments, but
+     * much less than the expected time of a (non-virtual)
+     * park/unpark context switch.  The optimal value is
+     * unknowable, in part because the relative costs of
+     * Thread.onSpinWait versus park/unpark vary across platforms.
+     * The current value is an empirical compromise across tested
+     * platforms.
+     *
+     * 4. When using timed waits, callers spin instead of invoking
+     * timed park if the remaining time is less than the likely cost
+     * of park/unpark. This also avoids re-parks when timed park
+     * returns just barely too soon. As is the case in most j.u.c
+     * blocking support, untimed waits use ManagedBlockers when
+     * callers are ForkJoin threads, but timed waits use plain
+     * parkNanos, under the rationale that known-to-be transient
+     * blocking doesn't require compensation. (This decision should be
+     * revisited here and elsewhere to deal with very long timeouts.)
+     *
+     * 5. Park/unpark signalling otherwise relies on a Dekker-like
+     * scheme in which the caller advertises the need to unpark by
+     * setting its waiter field, followed by a full fence and recheck
+     * before actually parking. An explicit fence in used here rather
+     * than unnecessarily requiring volatile accesses elsewhere. This
+     * fence also separates accesses to field isUniprocessor.
+     *
+     * 6. To make the above work, callers must precheck that
+     * timeouts are not already elapsed, and that interruptible
+     * operations were not already interrupted on call to the
+     * corresponding queue operation.  Cancellation on timeout or
+     * interrupt otherwise proceeds by trying to fulfill with an
+     * impossible value (which is one reason that we use Object
+     * types here rather than typed fields).
      */
-    private static final int FRONT_SPINS   = 1 << 7;
+    static final class DualNode implements ForkJoinPool.ManagedBlocker {
+        volatile Object item;   // initially non-null if isData; CASed to match
+        DualNode next;          // accessed only in chains of volatile ops
+        Thread waiter;          // access order constrained by context
+        final boolean isData;   // false if this is a request node
+
+        DualNode(Object item, boolean isData) {
+            ITEM.set(this, item); // relaxed write before publication
+            this.isData = isData;
+        }
+
+        // Atomic updates
+        final Object cmpExItem(Object cmp, Object val) { // try to match
+            return ITEM.compareAndExchange(this, cmp, val);
+        }
+        final DualNode cmpExNext(DualNode cmp, DualNode val) {
+            return (DualNode)NEXT.compareAndExchange(this, cmp, val);
+        }
+
+        /** Returns true if this node has been matched or cancelled  */
+        final boolean matched() {
+            return isData != (item != null);
+        }
+
+        /**
+         * Relaxed write to replace reference to user data with
+         * self-link. Can be used only if not already null after
+         * match.
+         */
+        final void selfLinkItem() {
+            ITEM.set(this, this);
+        }
+
+        /** The number of times to spin when eligible */
+        private static final int SPINS = 1 << 7;
+
+        /**
+         * The number of nanoseconds for which it is faster to spin
+         * rather than to use timed park. A rough estimate suffices.
+         */
+        private static final long SPIN_FOR_TIMEOUT_THRESHOLD = 1L << 10;
+
+        /**
+         * True if system is a uniprocessor, occasionally rechecked.
+         */
+        private static boolean isUniprocessor =
+            (Runtime.getRuntime().availableProcessors() == 1);
+
+        /**
+         * Refresh rate (probablility) for updating isUniprocessor
+         * field, to reduce the likeihood that multiple calls to await
+         * will contend invoking Runtime.availableProcessors.  Must be
+         * a power of two minus one.
+         */
+        private static final int UNIPROCESSOR_REFRESH_RATE = (1 << 5) - 1;
+
+        /**
+         * Possibly blocks until matched or caller gives up.
+         *
+         * @param e the comparison value for checking match
+         * @param ns timeout, or Long.MAX_VALUE if untimed
+         * @param blocker the LockSupport.setCurrentBlocker argument
+         * @param spin true if should spin when enabled
+         * @return matched item, or e if unmatched on interrupt or timeout
+         */
+        final Object await(Object e, long ns, Object blocker, boolean spin) {
+            Object m;                      // the match or e if none
+            boolean timed = (ns != Long.MAX_VALUE);
+            long deadline = (timed) ? System.nanoTime() + ns : 0L;
+            boolean upc = isUniprocessor;  // don't spin but later recheck
+            Thread w = Thread.currentThread();
+            if (w.isVirtual())             // don't spin
+                spin = false;
+            int spins = (spin & !upc) ? SPINS : 0; // negative when may park
+            while ((m = item) == e) {
+                if (spins >= 0) {
+                    if (--spins >= 0)
+                        Thread.onSpinWait();
+                    else {                 // prepare to park
+                        if (spin)          // occasionally recheck
+                            checkForUniprocessor(upc);
+                        LockSupport.setCurrentBlocker(blocker);
+                        waiter = w;        // ensure ordering
+                        VarHandle.fullFence();
+                    }
+                } else if (w.isInterrupted() ||
+                           (timed &&       // try to cancel with impossible match
+                            ((ns = deadline - System.nanoTime()) <= 0L))) {
+                    m = cmpExItem(e, (e == null) ? this : null);
+                    break;
+                } else if (timed) {
+                    if (ns < SPIN_FOR_TIMEOUT_THRESHOLD)
+                        Thread.onSpinWait();
+                    else
+                        LockSupport.parkNanos(ns);
+                } else if (w instanceof ForkJoinWorkerThread) {
+                    try {
+                        ForkJoinPool.managedBlock(this);
+                    } catch (InterruptedException cannotHappen) { }
+                } else
+                    LockSupport.park();
+            }
+            if (spins < 0) {
+                LockSupport.setCurrentBlocker(null);
+                waiter = null;
+            }
+            return m;
+        }
+
+        /** Occasionally updates isUniprocessor field */
+        private void checkForUniprocessor(boolean prev) {
+            int r = ThreadLocalRandom.nextSecondarySeed();
+            if ((r & UNIPROCESSOR_REFRESH_RATE) == 0) {
+                boolean u = (Runtime.getRuntime().availableProcessors() == 1);
+                if (u != prev)
+                    isUniprocessor = u;
+            }
+        }
+
+        // ManagedBlocker support
+        public final boolean isReleasable() {
+            return (matched() || Thread.currentThread().isInterrupted());
+        }
+        public final boolean block() {
+            while (!isReleasable()) LockSupport.park();
+            return true;
+        }
+
+        // VarHandle mechanics
+        static final VarHandle ITEM;
+        static final VarHandle NEXT;
+        static {
+            try {
+                Class<?> tn = DualNode.class;
+                MethodHandles.Lookup l = MethodHandles.lookup();
+                ITEM = l.findVarHandle(tn, "item", Object.class);
+                NEXT = l.findVarHandle(tn, "next", tn);
+            } catch (ReflectiveOperationException e) {
+                throw new ExceptionInInitializerError(e);
+            }
+            // Reduce the risk of rare disastrous classloading in first call to
+            // LockSupport.park: https://bugs.openjdk.org/browse/JDK-8074773
+            Class<?> ensureLoaded = LockSupport.class;
+        }
+    }
 
     /**
-     * The number of times to spin before blocking when a node is
-     * preceded by another node that is apparently spinning.  Also
-     * serves as an increment to FRONT_SPINS on phase changes, and as
-     * base average frequency for yielding during spins. Must be a
-     * power of two.
+     * Unless empty (in which case possibly null), a node from which
+     * all live nodes are reachable.
+     * Invariants:
+     * - head is never self-linked
+     * Non-invariants:
+     * - head may or may not be live
+     *
+     * This field is used by subclass SynchronousQueue.Transferer to
+     * record the top of a Lifo stack, with tail always null, but
+     * otherwise maintaining the same properties.
      */
-    private static final int CHAINED_SPINS = FRONT_SPINS >>> 1;
+    transient volatile DualNode head;
+
+    /**
+     * Unless null, a node from which the last node on list (that is,
+     * the unique node with node.next == null), if one exists, can be
+     * reached.
+     * Non-invariants:
+     * - tail may or may not be live
+     * - tail may be the same as head
+     * - tail may or may not be self-linked.
+     * - tail may lag behind head, so need not be reachable from head
+     */
+    transient volatile DualNode tail;
+
+    /** The number of apparent failures to unsplice cancelled nodes */
+    transient volatile int sweepVotes;
+
+    // Atomic updates
+
+    final DualNode cmpExTail(DualNode cmp, DualNode val) {
+        return (DualNode)TAIL.compareAndExchange(this, cmp, val);
+    }
+    final DualNode cmpExHead(DualNode cmp, DualNode val) {
+        return (DualNode)HEAD.compareAndExchange(this, cmp, val);
+    }
 
     /**
      * The maximum number of estimated removal failures (sweepVotes)
      * to tolerate before sweeping through the queue unlinking
-     * cancelled nodes that were not unlinked upon initial
-     * removal. See above for explanation. The value must be at least
-     * two to avoid useless sweeps when removing trailing nodes.
+     * dead nodes that were initially pinned.  Must be a power of
+     * two minus one, at least 3.
      */
-    static final int SWEEP_THRESHOLD = 32;
+    static final int SWEEP_THRESHOLD = (1 << 4) - 1;
 
     /**
-     * Queue nodes. Uses Object, not E, for items to allow forgetting
-     * them after use.  Relies heavily on Unsafe mechanics to minimize
-     * unnecessary ordering constraints: Writes that are intrinsically
-     * ordered wrt other accesses or CASes use simple relaxed forms.
+     * Adds a sweepVote and returns true if triggered threshold.
      */
-    static final class Node {
-        final boolean isData;   // false if this is a request node
-        volatile Object item;   // initially non-null if isData; CASed to match
-        volatile Node next;
-        volatile Thread waiter; // null until waiting
-
-        // CAS methods for fields
-        final boolean casNext(Node cmp, Node val) {
-            return UNSAFE.compareAndSwapObject(this, nextOffset, cmp, val);
-        }
-
-        final boolean casItem(Object cmp, Object val) {
-            // assert cmp == null || cmp.getClass() != Node.class;
-            return UNSAFE.compareAndSwapObject(this, itemOffset, cmp, val);
-        }
-
-        /**
-         * Constructs a new node.  Uses relaxed write because item can
-         * only be seen after publication via casNext.
-         */
-        Node(Object item, boolean isData) {
-            UNSAFE.putObject(this, itemOffset, item); // relaxed write
-            this.isData = isData;
-        }
-
-        /**
-         * Links node to itself to avoid garbage retention.  Called
-         * only after CASing head field, so uses relaxed write.
-         */
-        final void forgetNext() {
-            UNSAFE.putObject(this, nextOffset, this);
-        }
-
-        /**
-         * Sets item to self and waiter to null, to avoid garbage
-         * retention after matching or cancelling. Uses relaxed writes
-         * because order is already constrained in the only calling
-         * contexts: item is forgotten only after volatile/atomic
-         * mechanics that extract items.  Similarly, clearing waiter
-         * follows either CAS or return from park (if ever parked;
-         * else we don't care).
-         */
-        final void forgetContents() {
-            UNSAFE.putObject(this, itemOffset, this);
-            UNSAFE.putObject(this, waiterOffset, null);
-        }
-
-        /**
-         * Returns true if this node has been matched, including the
-         * case of artificial matches due to cancellation.
-         */
-        final boolean isMatched() {
-            Object x = item;
-            return (x == this) || ((x == null) == isData);
-        }
-
-        /**
-         * Returns true if this is an unmatched request node.
-         */
-        final boolean isUnmatchedRequest() {
-            return !isData && item == null;
-        }
-
-        /**
-         * Returns true if a node with the given mode cannot be
-         * appended to this node because this node is unmatched and
-         * has opposite data mode.
-         */
-        final boolean cannotPrecede(boolean haveData) {
-            boolean d = isData;
-            Object x;
-            return d != haveData && (x = item) != this && (x != null) == d;
-        }
-
-        /**
-         * Tries to artificially match a data node -- used by remove.
-         */
-        final boolean tryMatchData() {
-            // assert isData;
-            Object x = item;
-            if (x != null && x != this && casItem(x, null)) {
-                LockSupport.unpark(waiter);
-                return true;
-            }
-            return false;
-        }
-
-        private static final long serialVersionUID = -3375979862319811754L;
-
-        // Unsafe mechanics
-        private static final sun.misc.Unsafe UNSAFE;
-        private static final long itemOffset;
-        private static final long nextOffset;
-        private static final long waiterOffset;
-        static {
-            try {
-                UNSAFE = sun.misc.Unsafe.getUnsafe();
-                Class<?> k = Node.class;
-                itemOffset = UNSAFE.objectFieldOffset
-                    (k.getDeclaredField("item"));
-                nextOffset = UNSAFE.objectFieldOffset
-                    (k.getDeclaredField("next"));
-                waiterOffset = UNSAFE.objectFieldOffset
-                    (k.getDeclaredField("waiter"));
-            } catch (Exception e) {
-                throw new Error(e);
-            }
-        }
-    }
-
-    /** head of the queue; null until first enqueue */
-    transient volatile Node head;
-
-    /** tail of the queue; null until first append */
-    private transient volatile Node tail;
-
-    /** The number of apparent failures to unsplice removed nodes */
-    private transient volatile int sweepVotes;
-
-    // CAS methods for fields
-    private boolean casTail(Node cmp, Node val) {
-        return UNSAFE.compareAndSwapObject(this, tailOffset, cmp, val);
-    }
-
-    private boolean casHead(Node cmp, Node val) {
-        return UNSAFE.compareAndSwapObject(this, headOffset, cmp, val);
-    }
-
-    private boolean casSweepVotes(int cmp, int val) {
-        return UNSAFE.compareAndSwapInt(this, sweepVotesOffset, cmp, val);
-    }
-
-    /*
-     * Possible values for "how" argument in xfer method.
-     */
-    private static final int NOW   = 0; // for untimed poll, tryTransfer
-    private static final int ASYNC = 1; // for offer, put, add
-    private static final int SYNC  = 2; // for transfer, take
-    private static final int TIMED = 3; // for timed poll, tryTransfer
-
-    @SuppressWarnings("unchecked")
-    static <E> E cast(Object item) {
-        // assert item == null || item.getClass() != Node.class;
-        return (E) item;
+    final boolean sweepNow() {
+        return (SWEEP_THRESHOLD ==
+                ((int)SWEEPVOTES.getAndAdd(this, 1) & (SWEEP_THRESHOLD)));
     }
 
     /**
-     * Implements all queuing methods. See above for explanation.
+     * Implements all queuing methods. Loops, trying:
+     *
+     * * If not initialized, try to add new node (unless immediate) and exit
+     * * If tail has same mode, start traversing at tail for a likely
+     *   append, else at head for a likely match
+     * * Traverse over dead or wrong-mode nodes until finding a spot
+     *   to match/append, or falling off the list because of self-links.
+     * * On success, update head or tail if slacked, and possibly wait,
+     *   depending on ns argument
      *
      * @param e the item or null for take
-     * @param haveData true if this is a put, else a take
-     * @param how NOW, ASYNC, SYNC, or TIMED
-     * @param nanos timeout in nanosecs, used only if mode is TIMED
+     * @param ns timeout or negative if async, 0 if immediate,
+     *        Long.MAX_VALUE if untimed
      * @return an item if matched, else e
-     * @throws NullPointerException if haveData mode but e is null
      */
-    private E xfer(E e, boolean haveData, int how, long nanos) {
-        if (haveData && (e == null))
-            throw new NullPointerException();
-        Node s = null;                        // the node to append, if needed
-
-        retry:
-        for (;;) {                            // restart on append race
-
-            for (Node h = head, p = h; p != null;) { // find & match first node
-                boolean isData = p.isData;
-                Object item = p.item;
-                if (item != p && (item != null) == isData) { // unmatched
-                    if (isData == haveData)   // can't match
-                        break;
-                    if (p.casItem(item, e)) { // match
-                        for (Node q = p; q != h;) {
-                            Node n = q.next;  // update by 2 unless singleton
-                            if (head == h && casHead(h, n == null ? q : n)) {
-                                h.forgetNext();
-                                break;
-                            }                 // advance and retry
-                            if ((h = head)   == null ||
-                                (q = h.next) == null || !q.isMatched())
-                                break;        // unless slack < 2
-                        }
-                        LockSupport.unpark(p.waiter);
-                        return LinkedTransferQueue.<E>cast(item);
+    final Object xfer(Object e, long ns) {
+        boolean haveData = (e != null);
+        Object m;                           // the match or e if none
+        DualNode s = null, p;               // enqueued node and its predecessor
+        restart: for (DualNode prevp = null;;) {
+            DualNode h, t, q;
+            if ((h = head) == null &&       // initialize unless immediate
+                (ns == 0L ||
+                 (h = cmpExHead(null, s = new DualNode(e, haveData))) == null)) {
+                p = null;                   // no predecessor
+                break;                      // else lost init race
+            }
+            p = (t = tail) != null && t.isData == haveData && t != prevp ? t : h;
+            prevp = p;                      // avoid known self-linked tail path
+            do {
+                m = p.item;
+                q = p.next;
+                if (p.isData != haveData && haveData != (m != null) &&
+                    p.cmpExItem(m, e) == m) {
+                    Thread w = p.waiter;    // matched complementary node
+                    if (p != h && h == cmpExHead(h, (q == null) ? p : q))
+                        h.next = h;         // advance head; self-link old
+                    LockSupport.unpark(w);
+                    return m;
+                } else if (q == null) {
+                    if (ns == 0L)           // try to append unless immediate
+                        break restart;
+                    if (s == null)
+                        s = new DualNode(e, haveData);
+                    if ((q = p.cmpExNext(null, s)) == null) {
+                        if (p != t)
+                            cmpExTail(t, s);
+                        break restart;
                     }
                 }
-                Node n = p.next;
-                p = (p != n) ? n : (h = head); // Use head if p offlist
-            }
-
-            if (how != NOW) {                 // No matches available
-                if (s == null)
-                    s = new Node(e, haveData);
-                Node pred = tryAppend(s, haveData);
-                if (pred == null)
-                    continue retry;           // lost race vs opposite mode
-                if (how != ASYNC)
-                    return awaitMatch(s, pred, e, (how == TIMED), nanos);
-            }
-            return e; // not waiting
+            } while (p != (p = q));         // restart if self-linked
         }
+        if (s == null || ns <= 0L)
+            m = e;                          // don't wait
+        else if ((m = s.await(e, ns, this,  // spin if at or near head
+                              p == null || p.waiter == null)) == e)
+            unsplice(p, s);                 // cancelled
+        else if (m != null)
+            s.selfLinkItem();
+
+        return m;
     }
 
+    /* --------------  Removals -------------- */
+
     /**
-     * Tries to append node s as tail.
+     * Unlinks (now or later) the given (non-live) node with given
+     * predecessor. See above for rationale.
      *
-     * @param s the node to append
-     * @param haveData true if appending in data mode
-     * @return null on failure due to losing race with append in
-     * different mode, else s's predecessor, or s itself if no
-     * predecessor
+     * @param pred if nonnull, a node that was at one time known to be the
+     * predecessor of s (else s may have been head)
+     * @param s the node to be unspliced
      */
-    private Node tryAppend(Node s, boolean haveData) {
-        for (Node t = tail, p = t;;) {        // move p to last node and append
-            Node n, u;                        // temps for reads of next & tail
-            if (p == null && (p = head) == null) {
-                if (casHead(null, s))
-                    return s;                 // initialize
-            }
-            else if (p.cannotPrecede(haveData))
-                return null;                  // lost race vs opposite mode
-            else if ((n = p.next) != null)    // not last; keep traversing
-                p = p != t && t != (u = tail) ? (t = u) : // stale tail
-                    (p != n) ? n : null;      // restart if off list
-            else if (!p.casNext(null, s))
-                p = p.next;                   // re-read on CAS failure
+    private void unsplice(DualNode pred, DualNode s) {
+        boolean seen = false; // try removing by collapsing head
+        for (DualNode h = head, p = h, f; p != null;) {
+            boolean matched;
+            if (p == s)
+                matched = seen = true;
+            else
+                matched = p.matched();
+            if ((f = p.next) == p)
+                p = h = head;
+            else if (f != null && matched)
+                p = f;
             else {
-                if (p != t) {                 // update if slack now >= 2
-                    while ((tail != t || !casTail(t, s)) &&
-                           (t = tail)   != null &&
-                           (s = t.next) != null && // advance and retry
-                           (s = s.next) != null && s != t);
-                }
-                return p;
+                if (p != h && cmpExHead(h, p) == h)
+                    h.next = h; // self-link
+                break;
+            }
+        }
+        DualNode sn;      // try to unsplice if not pinned
+        if (!seen &&
+            pred != null && pred.next == s && s != null && (sn = s.next) != s &&
+            (sn == null || pred.cmpExNext(s, sn) != s || pred.matched()) &&
+            sweepNow()) { // occasionally sweep if might not have been removed
+            for (DualNode p = head, f, n, u;
+                 p != null && (f = p.next) != null && (n = f.next) != null;) {
+                p = (f == p                       ? head :  // stale
+                     !f.matched()                 ? f :     // skip
+                     f == (u = p.cmpExNext(f, n)) ? n : u); // unspliced
             }
         }
     }
 
     /**
-     * Spins/yields/blocks until node s is matched or caller gives up.
-     *
-     * @param s the waiting node
-     * @param pred the predecessor of s, or s itself if it has no
-     * predecessor, or null if unknown (the null case does not occur
-     * in any current calls but may in possible future extensions)
-     * @param e the comparison value for checking match
-     * @param timed if true, wait only until timeout elapses
-     * @param nanos timeout in nanosecs, used only if timed is true
-     * @return matched item, or e if unmatched on interrupt or timeout
+     * Tries to CAS pred.next (or head, if pred is null) from c to p.
+     * Caller must ensure that we're not unlinking the trailing node.
      */
-    private E awaitMatch(Node s, Node pred, E e, boolean timed, long nanos) {
-        final long deadline = timed ? System.nanoTime() + nanos : 0L;
-        Thread w = Thread.currentThread();
-        int spins = -1; // initialized after first item and cancel checks
-        ThreadLocalRandom randomYields = null; // bound if needed
+    final boolean tryCasSuccessor(DualNode pred, DualNode c, DualNode p) {
+        // assert p != null && c.matched() && c != p;
+        if (pred != null)
+            return pred.cmpExNext(c, p) == c;
+        else if (cmpExHead(c, p) != c)
+            return false;
+        if (c != null)
+            c.next = c;
 
-        for (;;) {
-            Object item = s.item;
-            if (item != e) {                  // matched
-                // assert item != s;
-                s.forgetContents();           // avoid garbage
-                return LinkedTransferQueue.<E>cast(item);
-            }
-            if ((w.isInterrupted() || (timed && nanos <= 0)) &&
-                    s.casItem(e, s)) {        // cancel
-                unsplice(pred, s);
-                return e;
-            }
-
-            if (spins < 0) {                  // establish spins at/near front
-                if ((spins = spinsFor(pred, s.isData)) > 0)
-                    randomYields = ThreadLocalRandom.current();
-            }
-            else if (spins > 0) {             // spin
-                --spins;
-                if (randomYields.nextInt(CHAINED_SPINS) == 0)
-                    Thread.yield();           // occasionally yield
-            }
-            else if (s.waiter == null) {
-                s.waiter = w;                 // request unpark then recheck
-            }
-            else if (timed) {
-                nanos = deadline - System.nanoTime();
-                if (nanos > 0L)
-                    LockSupport.parkNanos(this, nanos);
-            }
-            else {
-                LockSupport.park(this);
-            }
-        }
+        return true;
     }
 
     /**
-     * Returns spin/yield value for a node with given predecessor and
-     * data mode. See above for explanation.
+     * Collapses dead (matched) nodes between pred and q.
+     * @param pred the last known live node, or null if none
+     * @param c the first dead node
+     * @param p the last dead node
+     * @param q p.next: the next live node, or null if at end
+     * @return pred if pred still alive and CAS succeeded; else p
      */
-    private static int spinsFor(Node pred, boolean haveData) {
-        if (MP && pred != null) {
-            if (pred.isData != haveData)      // phase change
-                return FRONT_SPINS + CHAINED_SPINS;
-            if (pred.isMatched())             // probably at front
-                return FRONT_SPINS;
-            if (pred.waiter == null)          // pred apparently spinning
-                return CHAINED_SPINS;
+    final DualNode skipDeadNodes(DualNode pred, DualNode c,
+                                 DualNode p, DualNode q) {
+        // assert pred != c && p != q; && c.matched() && p.matched();
+        if (q == null) { // Never unlink trailing node.
+            if (c == p)
+                return pred;
+            q = p;
         }
-        return 0;
+        return (tryCasSuccessor(pred, c, q) && (pred == null || !pred.matched()))
+            ? pred : p;
+    }
+
+    /**
+     * Tries to match the given object only if p is a data
+     * node. Signals waiter on success.
+     */
+    final boolean tryMatchData(DualNode p, Object x) {
+        if (p != null && p.isData &&
+            x != null && p.cmpExItem(x, null) == x) {
+            LockSupport.unpark(p.waiter);
+            return true;
+        }
+        return false;
     }
 
     /* -------------- Traversal methods -------------- */
 
     /**
-     * Returns the successor of p, or the head node if p.next has been
-     * linked to self, which will only be true if traversing with a
-     * stale pointer that is now off the list.
+     * Returns the first unmatched data node, or null if none.
+     * Callers must recheck if the returned node is unmatched
+     * before using.
      */
-    final Node succ(Node p) {
-        Node next = p.next;
-        return (p == next) ? head : next;
-    }
-
-    /**
-     * Returns the first unmatched node of the given mode, or null if
-     * none.  Used by methods isEmpty, hasWaitingConsumer.
-     */
-    private Node firstOfMode(boolean isData) {
-        for (Node p = head; p != null; p = succ(p)) {
-            if (!p.isMatched())
-                return (p.isData == isData) ? p : null;
-        }
-        return null;
-    }
-
-    /**
-     * Version of firstOfMode used by Spliterator. Callers must
-     * recheck if the returned node's item field is null or
-     * self-linked before using.
-     */
-    final Node firstDataNode() {
-        for (Node p = head; p != null;) {
+    final DualNode firstDataNode() {
+        for (DualNode h = head, p = h, q, u; p != null;) {
+            boolean isData = p.isData;
             Object item = p.item;
-            if (p.isData) {
-                if (item != null && item != p)
-                    return p;
-            }
-            else if (item == null)
+            if (isData && item != null)       // is live data
+                return p;
+            else if (!isData && item == null) // is live request
                 break;
-            if (p == (p = p.next))
-                p = head;
-        }
-        return null;
-    }
-
-    /**
-     * Returns the item in the first unmatched node with isData; or
-     * null if none.  Used by peek.
-     */
-    private E firstDataItem() {
-        for (Node p = head; p != null; p = succ(p)) {
-            Object item = p.item;
-            if (p.isData) {
-                if (item != null && item != p)
-                    return LinkedTransferQueue.<E>cast(item);
+            else if ((q = p.next) == null)    // end of list
+                break;
+            else if (p == q)                  // self-link; restart
+                p = h = head;
+            else if (p == h)                  // traverse past header
+                p = q;
+            else if ((u = cmpExHead(h, q)) != h)
+                p = h = u;                    // lost update race
+            else {
+                h.next = h;                   // collapse; self-link
+                p = h = q;
             }
-            else if (item == null)
-                return null;
         }
         return null;
     }
@@ -820,91 +745,184 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      * Traverses and counts unmatched nodes of the given mode.
      * Used by methods size and getWaitingConsumerCount.
      */
-    private int countOfMode(boolean data) {
-        int count = 0;
-        for (Node p = head; p != null; ) {
-            if (!p.isMatched()) {
-                if (p.isData != data)
-                    return 0;
-                if (++count == Integer.MAX_VALUE) // saturated
-                    break;
+    final int countOfMode(boolean data) {
+        restartFromHead: for (;;) {
+            int count = 0;
+            for (DualNode p = head; p != null;) {
+                if (!p.matched()) {
+                    if (p.isData != data)
+                        return 0;
+                    if (++count == Integer.MAX_VALUE)
+                        break;  // @see Collection.size()
+                }
+                if (p == (p = p.next))
+                    continue restartFromHead;
             }
-            Node n = p.next;
-            if (n != p)
-                p = n;
-            else {
-                count = 0;
-                p = head;
-            }
+            return count;
         }
-        return count;
     }
 
+    public String toString() {
+        String[] a = null;
+        restartFromHead: for (;;) {
+            int charLength = 0;
+            int size = 0;
+            for (DualNode p = head; p != null;) {
+                Object item = p.item;
+                if (p.isData) {
+                    if (item != null) {
+                        if (a == null)
+                            a = new String[4];
+                        else if (size == a.length)
+                            a = Arrays.copyOf(a, 2 * size);
+                        String s = item.toString();
+                        a[size++] = s;
+                        charLength += s.length();
+                    }
+                } else if (item == null)
+                    break;
+                if (p == (p = p.next))
+                    continue restartFromHead;
+            }
+
+            if (size == 0)
+                return "[]";
+
+            return Helpers.toString(a, size, charLength);
+        }
+    }
+
+    private Object[] toArrayInternal(Object[] a) {
+        Object[] x = a;
+        restartFromHead: for (;;) {
+            int size = 0;
+            for (DualNode p = head; p != null;) {
+                Object item = p.item;
+                if (p.isData) {
+                    if (item != null) {
+                        if (x == null)
+                            x = new Object[4];
+                        else if (size == x.length)
+                            x = Arrays.copyOf(x, 2 * (size + 4));
+                        x[size++] = item;
+                    }
+                } else if (item == null)
+                    break;
+                if (p == (p = p.next))
+                    continue restartFromHead;
+            }
+            if (x == null)
+                return new Object[0];
+            else if (a != null && size <= a.length) {
+                if (a != x)
+                    System.arraycopy(x, 0, a, 0, size);
+                if (size < a.length)
+                    a[size] = null;
+                return a;
+            }
+            return (size == x.length) ? x : Arrays.copyOf(x, size);
+        }
+    }
+
+    /**
+     * Returns an array containing all of the elements in this queue, in
+     * proper sequence.
+     *
+     * <p>The returned array will be "safe" in that no references to it are
+     * maintained by this queue.  (In other words, this method must allocate
+     * a new array).  The caller is thus free to modify the returned array.
+     *
+     * <p>This method acts as bridge between array-based and collection-based
+     * APIs.
+     *
+     * @return an array containing all of the elements in this queue
+     */
+    public Object[] toArray() {
+        return toArrayInternal(null);
+    }
+
+    /**
+     * Returns an array containing all of the elements in this queue, in
+     * proper sequence; the runtime type of the returned array is that of
+     * the specified array.  If the queue fits in the specified array, it
+     * is returned therein.  Otherwise, a new array is allocated with the
+     * runtime type of the specified array and the size of this queue.
+     *
+     * <p>If this queue fits in the specified array with room to spare
+     * (i.e., the array has more elements than this queue), the element in
+     * the array immediately following the end of the queue is set to
+     * {@code null}.
+     *
+     * <p>Like the {@link #toArray()} method, this method acts as bridge between
+     * array-based and collection-based APIs.  Further, this method allows
+     * precise control over the runtime type of the output array, and may,
+     * under certain circumstances, be used to save allocation costs.
+     *
+     * <p>Suppose {@code x} is a queue known to contain only strings.
+     * The following code can be used to dump the queue into a newly
+     * allocated array of {@code String}:
+     *
+     * <pre> {@code String[] y = x.toArray(new String[0]);}</pre>
+     *
+     * Note that {@code toArray(new Object[0])} is identical in function to
+     * {@code toArray()}.
+     *
+     * @param a the array into which the elements of the queue are to
+     *          be stored, if it is big enough; otherwise, a new array of the
+     *          same runtime type is allocated for this purpose
+     * @return an array containing all of the elements in this queue
+     * @throws ArrayStoreException if the runtime type of the specified array
+     *         is not a supertype of the runtime type of every element in
+     *         this queue
+     * @throws NullPointerException if the specified array is null
+     */
+    @SuppressWarnings("unchecked")
+    public <T> T[] toArray(T[] a) {
+        Objects.requireNonNull(a);
+        return (T[]) toArrayInternal(a);
+    }
+
+    /**
+     * Weakly-consistent iterator.
+     *
+     * Lazily updated ancestor is expected to be amortized O(1) remove(),
+     * but O(n) in the worst case, when lastRet is concurrently deleted.
+     */
     final class Itr implements Iterator<E> {
-        private Node nextNode;   // next node to return item for
-        private E nextItem;      // the corresponding item
-        private Node lastRet;    // last returned node, to support remove
-        private Node lastPred;   // predecessor to unlink lastRet
+        private DualNode nextNode;   // next node to return item for
+        private E nextItem;          // the corresponding item
+        private DualNode lastRet;    // last returned node, to support remove
+        private DualNode ancestor;   // Helps unlink lastRet on remove()
 
         /**
-         * Moves to next node after prev, or first node if prev null.
+         * Moves to next node after pred, or first node if pred null.
          */
-        private void advance(Node prev) {
-            /*
-             * To track and avoid buildup of deleted nodes in the face
-             * of calls to both Queue.remove and Itr.remove, we must
-             * include variants of unsplice and sweep upon each
-             * advance: Upon Itr.remove, we may need to catch up links
-             * from lastPred, and upon other removes, we might need to
-             * skip ahead from stale nodes and unsplice deleted ones
-             * found while advancing.
-             */
-
-            Node r, b; // reset lastPred upon possible deletion of lastRet
-            if ((r = lastRet) != null && !r.isMatched())
-                lastPred = r;    // next lastPred is old lastRet
-            else if ((b = lastPred) == null || b.isMatched())
-                lastPred = null; // at start of list
-            else {
-                Node s, n;       // help with removal of lastPred.next
-                while ((s = b.next) != null &&
-                       s != b && s.isMatched() &&
-                       (n = s.next) != null && n != s)
-                    b.casNext(s, n);
-            }
-
-            this.lastRet = prev;
-
-            for (Node p = prev, s, n;;) {
-                s = (p == null) ? head : p.next;
-                if (s == null)
-                    break;
-                else if (s == p) {
-                    p = null;
-                    continue;
+        @SuppressWarnings("unchecked")
+        private void advance(DualNode pred) {
+            for (DualNode p = (pred == null) ? head : pred.next, c = p;
+                 p != null; ) {
+                boolean isData = p.isData;
+                Object item = p.item;
+                if (isData && item != null) {
+                    nextNode = p;
+                    nextItem = (E) item;
+                    if (c != p)
+                        tryCasSuccessor(pred, c, p);
+                    return;
                 }
-                Object item = s.item;
-                if (s.isData) {
-                    if (item != null && item != s) {
-                        nextItem = LinkedTransferQueue.<E>cast(item);
-                        nextNode = s;
-                        return;
-                    }
+                else if (!isData && item == null)
+                    break;
+                if (c != p && !tryCasSuccessor(pred, c, c = p)) {
+                    pred = p;
+                    c = p = p.next;
                 }
-                else if (item == null)
-                    break;
-                // assert s.isMatched();
-                if (p == null)
-                    p = s;
-                else if ((n = s.next) == null)
-                    break;
-                else if (s == n)
-                    p = null;
-                else
-                    p.casNext(s, n);
+                else if (p == (p = p.next)) {
+                    pred = null;
+                    c = p = head;
+                }
             }
-            nextNode = null;
             nextItem = null;
+            nextNode = null;
         }
 
         Itr() {
@@ -916,110 +934,156 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
         }
 
         public final E next() {
-            Node p = nextNode;
-            if (p == null) throw new NoSuchElementException();
+            DualNode p;
+            if ((p = nextNode) == null) throw new NoSuchElementException();
             E e = nextItem;
-            advance(p);
+            advance(lastRet = p);
             return e;
         }
 
+        public void forEachRemaining(Consumer<? super E> action) {
+            Objects.requireNonNull(action);
+            DualNode q = null;
+            for (DualNode p; (p = nextNode) != null; advance(q = p))
+                action.accept(nextItem);
+            if (q != null)
+                lastRet = q;
+        }
+
         public final void remove() {
-            final Node lastRet = this.lastRet;
+            final DualNode lastRet = this.lastRet;
             if (lastRet == null)
                 throw new IllegalStateException();
             this.lastRet = null;
-            if (lastRet.tryMatchData())
-                unsplice(lastPred, lastRet);
+            if (lastRet.item == null)   // already deleted?
+                return;
+            // Advance ancestor, collapsing intervening dead nodes
+            DualNode pred = ancestor;
+            for (DualNode p = (pred == null) ? head : pred.next, c = p, q;
+                 p != null; ) {
+                if (p == lastRet) {
+                    tryMatchData(p, p.item);
+                    if ((q = p.next) == null) q = p;
+                    if (c != q) tryCasSuccessor(pred, c, q);
+                    ancestor = pred;
+                    return;
+                }
+                final Object item; final boolean pAlive;
+                if (pAlive = ((item = p.item) != null && p.isData)) {
+                    // exceptionally, nothing to do
+                }
+                else if (!p.isData && item == null)
+                    break;
+                if ((c != p && !tryCasSuccessor(pred, c, c = p)) || pAlive) {
+                    pred = p;
+                    c = p = p.next;
+                }
+                else if (p == (p = p.next)) {
+                    pred = null;
+                    c = p = head;
+                }
+            }
+            // traversal failed to find lastRet; must have been deleted;
+            // leave ancestor at original location to avoid overshoot;
+            // better luck next time!
+
+            // assert lastRet.matched();
         }
     }
 
     /** A customized variant of Spliterators.IteratorSpliterator */
-    static final class LTQSpliterator<E> implements Spliterator<E> {
+    final class LTQSpliterator implements Spliterator<E> {
         static final int MAX_BATCH = 1 << 25;  // max batch array size;
-        final LinkedTransferQueue<E> queue;
-        Node current;    // current node; null until initialized
+        DualNode current;   // current node; null until initialized
         int batch;          // batch size for splits
         boolean exhausted;  // true when no more nodes
-        LTQSpliterator(LinkedTransferQueue<E> queue) {
-            this.queue = queue;
-        }
+        LTQSpliterator() {}
 
         public Spliterator<E> trySplit() {
-            Node p;
-            final LinkedTransferQueue<E> q = this.queue;
-            int b = batch;
-            int n = (b <= 0) ? 1 : (b >= MAX_BATCH) ? MAX_BATCH : b + 1;
-            if (!exhausted &&
-                ((p = current) != null || (p = q.firstDataNode()) != null) &&
-                p.next != null) {
-                Object[] a = new Object[n];
-                int i = 0;
-                do {
-                    Object e = p.item;
-                    if (e != p && (a[i] = e) != null)
-                        ++i;
-                    if (p == (p = p.next))
-                        p = q.firstDataNode();
-                } while (p != null && i < n && p.isData);
-                if ((current = p) == null)
-                    exhausted = true;
-                if (i > 0) {
-                    batch = i;
-                    return Spliterators.spliterator
-                        (a, 0, i, Spliterator.ORDERED | Spliterator.NONNULL |
-                         Spliterator.CONCURRENT);
+            DualNode p, q;
+            if ((p = current()) == null || (q = p.next) == null)
+                return null;
+            int i = 0, n = batch = Math.min(batch + 1, MAX_BATCH);
+            Object[] a = null;
+            do {
+                final Object item = p.item;
+                if (p.isData) {
+                    if (item != null) {
+                        if (a == null)
+                            a = new Object[n];
+                        a[i++] = item;
+                    }
+                } else if (item == null) {
+                    p = null;
+                    break;
                 }
-            }
-            return null;
+                if (p == (p = q))
+                    p = firstDataNode();
+            } while (p != null && (q = p.next) != null && i < n);
+            setCurrent(p);
+            return (i == 0) ? null :
+                Spliterators.spliterator(a, 0, i, (Spliterator.ORDERED |
+                                                   Spliterator.NONNULL |
+                                                   Spliterator.CONCURRENT));
         }
 
-        @SuppressWarnings("unchecked")
         public void forEachRemaining(Consumer<? super E> action) {
-            Node p;
-            if (action == null) throw new NullPointerException();
-            final LinkedTransferQueue<E> q = this.queue;
-            if (!exhausted &&
-                ((p = current) != null || (p = q.firstDataNode()) != null)) {
+            Objects.requireNonNull(action);
+            final DualNode p;
+            if ((p = current()) != null) {
+                current = null;
                 exhausted = true;
-                do {
-                    Object e = p.item;
-                    if (e != null && e != p)
-                        action.accept((E)e);
-                    if (p == (p = p.next))
-                        p = q.firstDataNode();
-                } while (p != null && p.isData);
+                forEachFrom(action, p);
             }
         }
 
         @SuppressWarnings("unchecked")
         public boolean tryAdvance(Consumer<? super E> action) {
-            Node p;
-            if (action == null) throw new NullPointerException();
-            final LinkedTransferQueue<E> q = this.queue;
-            if (!exhausted &&
-                ((p = current) != null || (p = q.firstDataNode()) != null)) {
-                Object e;
+            Objects.requireNonNull(action);
+            DualNode p;
+            if ((p = current()) != null) {
+                E e = null;
                 do {
-                    if ((e = p.item) == p)
-                        e = null;
+                    boolean isData = p.isData;
+                    Object item = p.item;
                     if (p == (p = p.next))
-                        p = q.firstDataNode();
-                } while (e == null && p != null && p.isData);
-                if ((current = p) == null)
-                    exhausted = true;
+                        p = head;
+                    if (isData) {
+                        if (item != null) {
+                            e = (E) item;
+                            break;
+                        }
+                    }
+                    else if (item == null)
+                        p = null;
+                } while (p != null);
+                setCurrent(p);
                 if (e != null) {
-                    action.accept((E)e);
+                    action.accept(e);
                     return true;
                 }
             }
             return false;
         }
 
+        private void setCurrent(DualNode p) {
+            if ((current = p) == null)
+                exhausted = true;
+        }
+
+        private DualNode current() {
+            DualNode p;
+            if ((p = current) == null && !exhausted)
+                setCurrent(p = firstDataNode());
+            return p;
+        }
+
         public long estimateSize() { return Long.MAX_VALUE; }
 
         public int characteristics() {
-            return Spliterator.ORDERED | Spliterator.NONNULL |
-                Spliterator.CONCURRENT;
+            return (Spliterator.ORDERED |
+                    Spliterator.NONNULL |
+                    Spliterator.CONCURRENT);
         }
     }
 
@@ -1040,104 +1104,7 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      * @since 1.8
      */
     public Spliterator<E> spliterator() {
-        return new LTQSpliterator<E>(this);
-    }
-
-    /* -------------- Removal methods -------------- */
-
-    /**
-     * Unsplices (now or later) the given deleted/cancelled node with
-     * the given predecessor.
-     *
-     * @param pred a node that was at one time known to be the
-     * predecessor of s, or null or s itself if s is/was at head
-     * @param s the node to be unspliced
-     */
-    final void unsplice(Node pred, Node s) {
-        s.forgetContents(); // forget unneeded fields
-        /*
-         * See above for rationale. Briefly: if pred still points to
-         * s, try to unlink s.  If s cannot be unlinked, because it is
-         * trailing node or pred might be unlinked, and neither pred
-         * nor s are head or offlist, add to sweepVotes, and if enough
-         * votes have accumulated, sweep.
-         */
-        if (pred != null && pred != s && pred.next == s) {
-            Node n = s.next;
-            if (n == null ||
-                (n != s && pred.casNext(s, n) && pred.isMatched())) {
-                for (;;) {               // check if at, or could be, head
-                    Node h = head;
-                    if (h == pred || h == s || h == null)
-                        return;          // at head or list empty
-                    if (!h.isMatched())
-                        break;
-                    Node hn = h.next;
-                    if (hn == null)
-                        return;          // now empty
-                    if (hn != h && casHead(h, hn))
-                        h.forgetNext();  // advance head
-                }
-                if (pred.next != pred && s.next != s) { // recheck if offlist
-                    for (;;) {           // sweep now if enough votes
-                        int v = sweepVotes;
-                        if (v < SWEEP_THRESHOLD) {
-                            if (casSweepVotes(v, v + 1))
-                                break;
-                        }
-                        else if (casSweepVotes(v, 0)) {
-                            sweep();
-                            break;
-                        }
-                    }
-                }
-            }
-        }
-    }
-
-    /**
-     * Unlinks matched (typically cancelled) nodes encountered in a
-     * traversal from head.
-     */
-    private void sweep() {
-        for (Node p = head, s, n; p != null && (s = p.next) != null; ) {
-            if (!s.isMatched())
-                // Unmatched nodes are never self-linked
-                p = s;
-            else if ((n = s.next) == null) // trailing node is pinned
-                break;
-            else if (s == n)    // stale
-                // No need to also check for p == s, since that implies s == n
-                p = head;
-            else
-                p.casNext(s, n);
-        }
-    }
-
-    /**
-     * Main implementation of remove(Object)
-     */
-    private boolean findAndRemove(Object e) {
-        if (e != null) {
-            for (Node pred = null, p = head; p != null; ) {
-                Object item = p.item;
-                if (p.isData) {
-                    if (item != null && item != p && e.equals(item) &&
-                        p.tryMatchData()) {
-                        unsplice(pred, p);
-                        return true;
-                    }
-                }
-                else if (item == null)
-                    break;
-                pred = p;
-                if ((p = p.next) == pred) { // stale
-                    pred = null;
-                    p = head;
-                }
-            }
-        }
-        return false;
+        return new LTQSpliterator();
     }
 
     /**
@@ -1156,8 +1123,17 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      *         of its elements are null
      */
     public LinkedTransferQueue(Collection<? extends E> c) {
-        this();
-        addAll(c);
+        DualNode h = null, t = null;
+        for (E e : c) {
+            DualNode newNode = new DualNode(Objects.requireNonNull(e), true);
+            if (t == null)
+                h = newNode;
+            else
+                t.next = newNode;
+            t = newNode;
+        }
+        head = h;
+        tail = t;
     }
 
     /**
@@ -1167,7 +1143,8 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      * @throws NullPointerException if the specified element is null
      */
     public void put(E e) {
-        xfer(e, true, ASYNC, 0);
+        Objects.requireNonNull(e);
+        xfer(e, -1L);
     }
 
     /**
@@ -1176,12 +1153,12 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      * return {@code false}.
      *
      * @return {@code true} (as specified by
-     *  {@link java.util.concurrent.BlockingQueue#offer(Object,long,TimeUnit)
-     *  BlockingQueue.offer})
+     *  {@link BlockingQueue#offer(Object,long,TimeUnit) BlockingQueue.offer})
      * @throws NullPointerException if the specified element is null
      */
     public boolean offer(E e, long timeout, TimeUnit unit) {
-        xfer(e, true, ASYNC, 0);
+        Objects.requireNonNull(e);
+        xfer(e, -1L);
         return true;
     }
 
@@ -1193,7 +1170,8 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      * @throws NullPointerException if the specified element is null
      */
     public boolean offer(E e) {
-        xfer(e, true, ASYNC, 0);
+        Objects.requireNonNull(e);
+        xfer(e, -1L);
         return true;
     }
 
@@ -1206,7 +1184,8 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      * @throws NullPointerException if the specified element is null
      */
     public boolean add(E e) {
-        xfer(e, true, ASYNC, 0);
+        Objects.requireNonNull(e);
+        xfer(e, -1L);
         return true;
     }
 
@@ -1221,7 +1200,8 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      * @throws NullPointerException if the specified element is null
      */
     public boolean tryTransfer(E e) {
-        return xfer(e, true, NOW, 0) == null;
+        Objects.requireNonNull(e);
+        return xfer(e, 0L) == null;
     }
 
     /**
@@ -1236,10 +1216,13 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      * @throws NullPointerException if the specified element is null
      */
     public void transfer(E e) throws InterruptedException {
-        if (xfer(e, true, SYNC, 0) != null) {
+        Objects.requireNonNull(e);
+        if (!Thread.interrupted()) {
+            if (xfer(e, Long.MAX_VALUE) == null)
+                return;
             Thread.interrupted(); // failure possible only due to interrupt
-            throw new InterruptedException();
         }
+        throw new InterruptedException();
     }
 
     /**
@@ -1258,30 +1241,38 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      */
     public boolean tryTransfer(E e, long timeout, TimeUnit unit)
         throws InterruptedException {
-        if (xfer(e, true, TIMED, unit.toNanos(timeout)) == null)
+        Objects.requireNonNull(e);
+        long nanos = Math.max(unit.toNanos(timeout), 0L);
+        if (xfer(e, nanos) == null)
             return true;
         if (!Thread.interrupted())
             return false;
         throw new InterruptedException();
     }
 
+    @SuppressWarnings("unchecked")
     public E take() throws InterruptedException {
-        E e = xfer(null, false, SYNC, 0);
-        if (e != null)
-            return e;
-        Thread.interrupted();
+        Object e;
+        if (!Thread.interrupted()) {
+            if ((e = xfer(null, Long.MAX_VALUE)) != null)
+                return (E) e;
+            Thread.interrupted();
+        }
         throw new InterruptedException();
     }
 
+    @SuppressWarnings("unchecked")
     public E poll(long timeout, TimeUnit unit) throws InterruptedException {
-        E e = xfer(null, false, TIMED, unit.toNanos(timeout));
-        if (e != null || !Thread.interrupted())
-            return e;
+        Object e;
+        long nanos = Math.max(unit.toNanos(timeout), 0L);
+        if ((e = xfer(null, nanos)) != null || !Thread.interrupted())
+            return (E) e;
         throw new InterruptedException();
     }
 
+    @SuppressWarnings("unchecked")
     public E poll() {
-        return xfer(null, false, NOW, 0);
+        return (E) xfer(null, 0L);
     }
 
     /**
@@ -1289,15 +1280,12 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      * @throws IllegalArgumentException {@inheritDoc}
      */
     public int drainTo(Collection<? super E> c) {
-        if (c == null)
-            throw new NullPointerException();
+        Objects.requireNonNull(c);
         if (c == this)
             throw new IllegalArgumentException();
         int n = 0;
-        for (E e; (e = poll()) != null;) {
+        for (E e; (e = poll()) != null; n++)
             c.add(e);
-            ++n;
-        }
         return n;
     }
 
@@ -1306,15 +1294,12 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      * @throws IllegalArgumentException {@inheritDoc}
      */
     public int drainTo(Collection<? super E> c, int maxElements) {
-        if (c == null)
-            throw new NullPointerException();
+        Objects.requireNonNull(c);
         if (c == this)
             throw new IllegalArgumentException();
         int n = 0;
-        for (E e; n < maxElements && (e = poll()) != null;) {
+        for (E e; n < maxElements && (e = poll()) != null; n++)
             c.add(e);
-            ++n;
-        }
         return n;
     }
 
@@ -1332,7 +1317,22 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
     }
 
     public E peek() {
-        return firstDataItem();
+        restartFromHead: for (;;) {
+            for (DualNode p = head; p != null;) {
+                Object item = p.item;
+                if (p.isData) {
+                    if (item != null) {
+                        @SuppressWarnings("unchecked") E e = (E) item;
+                        return e;
+                    }
+                }
+                else if (item == null)
+                    break;
+                if (p == (p = p.next))
+                    continue restartFromHead;
+            }
+            return null;
+        }
     }
 
     /**
@@ -1341,15 +1341,24 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      * @return {@code true} if this queue contains no elements
      */
     public boolean isEmpty() {
-        for (Node p = head; p != null; p = succ(p)) {
-            if (!p.isMatched())
-                return !p.isData;
-        }
-        return true;
+        return firstDataNode() == null;
     }
 
     public boolean hasWaitingConsumer() {
-        return firstOfMode(false) != null;
+        restartFromHead: for (;;) {
+            for (DualNode p = head; p != null;) {
+                Object item = p.item;
+                if (p.isData) {
+                    if (item != null)
+                        break;
+                }
+                else if (item == null)
+                    return true;
+                if (p == (p = p.next))
+                    continue restartFromHead;
+            }
+            return false;
+        }
     }
 
     /**
@@ -1384,7 +1393,32 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      * @return {@code true} if this queue changed as a result of the call
      */
     public boolean remove(Object o) {
-        return findAndRemove(o);
+        if (o == null) return false;
+        restartFromHead: for (;;) {
+            for (DualNode p = head, pred = null; p != null; ) {
+                boolean isData = p.isData;
+                Object item = p.item;
+                DualNode q = p.next;
+                if (item != null) {
+                    if (isData) {
+                        if (o.equals(item) && tryMatchData(p, item)) {
+                            skipDeadNodes(pred, p, p, q);
+                            return true;
+                        }
+                        pred = p; p = q; continue;
+                    }
+                }
+                else if (!isData)
+                    break;
+                for (DualNode c = p;; q = p.next) {
+                    if (q == null || !q.matched()) {
+                        pred = skipDeadNodes(pred, c, p, q); p = q; break;
+                    }
+                    if (p == (p = q)) continue restartFromHead;
+                }
+            }
+            return false;
+        }
     }
 
     /**
@@ -1397,16 +1431,29 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      */
     public boolean contains(Object o) {
         if (o == null) return false;
-        for (Node p = head; p != null; p = succ(p)) {
-            Object item = p.item;
-            if (p.isData) {
-                if (item != null && item != p && o.equals(item))
-                    return true;
+        restartFromHead: for (;;) {
+            for (DualNode p = head, pred = null; p != null; ) {
+                boolean isData = p.isData;
+                Object item = p.item;
+                DualNode q = p.next;
+                if (item != null) {
+                    if (isData) {
+                        if (o.equals(item))
+                            return true;
+                        pred = p; p = q; continue;
+                    }
+                }
+                else if (!isData)
+                    break;
+                for (DualNode c = p;; q = p.next) {
+                    if (q == null || !q.matched()) {
+                        pred = skipDeadNodes(pred, c, p, q); p = q; break;
+                    }
+                    if (p == (p = q)) continue restartFromHead;
+                }
             }
-            else if (item == null)
-                break;
+            return false;
         }
-        return false;
     }
 
     /**
@@ -1414,8 +1461,7 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      * {@code LinkedTransferQueue} is not capacity constrained.
      *
      * @return {@code Integer.MAX_VALUE} (as specified by
-     *         {@link java.util.concurrent.BlockingQueue#remainingCapacity()
-     *         BlockingQueue.remainingCapacity})
+     *         {@link BlockingQueue#remainingCapacity()})
      */
     public int remainingCapacity() {
         return Integer.MAX_VALUE;
@@ -1447,35 +1493,142 @@ public class LinkedTransferQueue<E> extends AbstractQueue<E>
      */
     private void readObject(java.io.ObjectInputStream s)
         throws java.io.IOException, ClassNotFoundException {
-        s.defaultReadObject();
-        for (;;) {
-            @SuppressWarnings("unchecked")
-            E item = (E) s.readObject();
-            if (item == null)
-                break;
+
+        // Read in elements until trailing null sentinel found
+        DualNode h = null, t = null;
+        for (Object item; (item = s.readObject()) != null; ) {
+            DualNode newNode = new DualNode(item, true);
+            if (t == null)
+                h = newNode;
             else
-                offer(item);
+                t.next = newNode;
+            t = newNode;
+        }
+        head = h;
+        tail = t;
+    }
+
+    /**
+     * @throws NullPointerException {@inheritDoc}
+     */
+    public boolean removeIf(Predicate<? super E> filter) {
+        Objects.requireNonNull(filter);
+        return bulkRemove(filter);
+    }
+
+    /**
+     * @throws NullPointerException {@inheritDoc}
+     */
+    public boolean removeAll(Collection<?> c) {
+        Objects.requireNonNull(c);
+        return bulkRemove(e -> c.contains(e));
+    }
+
+    /**
+     * @throws NullPointerException {@inheritDoc}
+     */
+    public boolean retainAll(Collection<?> c) {
+        Objects.requireNonNull(c);
+        return bulkRemove(e -> !c.contains(e));
+    }
+
+    public void clear() {
+        bulkRemove(e -> true);
+    }
+
+    /**
+     * Tolerate this many consecutive dead nodes before CAS-collapsing.
+     * Amortized cost of clear() is (1 + 1/MAX_HOPS) CASes per element.
+     */
+    private static final int MAX_HOPS = 8;
+
+
+    /** Implementation of bulk remove methods. */
+    @SuppressWarnings("unchecked")
+    private boolean bulkRemove(Predicate<? super E> filter) {
+        boolean removed = false;
+        restartFromHead: for (;;) {
+            int hops = MAX_HOPS;
+            // c will be CASed to collapse intervening dead nodes between
+            // pred (or head if null) and p.
+            for (DualNode p = head, c = p, pred = null, q; p != null; p = q) {
+                boolean isData = p.isData, pAlive;
+                Object item = p.item;
+                q = p.next;
+                if (pAlive = (item != null && isData)) {
+                    if (filter.test((E) item)) {
+                        if (tryMatchData(p, item))
+                            removed = true;
+                        pAlive = false;
+                    }
+                }
+                else if (!isData && item == null)
+                    break;
+                if (pAlive || q == null || --hops == 0) {
+                    // p might already be self-linked here, but if so:
+                    // - CASing head will surely fail
+                    // - CASing pred's next will be useless but harmless.
+                    if ((c != p && !tryCasSuccessor(pred, c, c = p)) || pAlive) {
+                        // if CAS failed or alive, abandon old pred
+                        hops = MAX_HOPS;
+                        pred = p;
+                        c = q;
+                    }
+                } else if (p == q)
+                    continue restartFromHead;
+            }
+            return removed;
         }
     }
 
-    // Unsafe mechanics
+    /**
+     * Runs action on each element found during a traversal starting at p.
+     * If p is null, the action is not run.
+     */
+    @SuppressWarnings("unchecked")
+    void forEachFrom(Consumer<? super E> action, DualNode p) {
+        for (DualNode pred = null; p != null; ) {
+            boolean isData = p.isData;
+            Object item = p.item;
+            DualNode q = p.next;
+            if (item != null) {
+                if (isData) {
+                    action.accept((E) item);
+                    pred = p; p = q; continue;
+                }
+            }
+            else if (!isData)
+                break;
+            for (DualNode c = p;; q = p.next) {
+                if (q == null || !q.matched()) {
+                    pred = skipDeadNodes(pred, c, p, q); p = q; break;
+                }
+                if (p == (p = q)) { pred = null; p = head; break; }
+            }
+        }
+    }
 
-    private static final sun.misc.Unsafe UNSAFE;
-    private static final long headOffset;
-    private static final long tailOffset;
-    private static final long sweepVotesOffset;
+    /**
+     * @throws NullPointerException {@inheritDoc}
+     */
+    public void forEach(Consumer<? super E> action) {
+        Objects.requireNonNull(action);
+        forEachFrom(action, head);
+    }
+
+    // VarHandle mechanics
+    static final VarHandle HEAD;
+    static final VarHandle TAIL;
+    static final VarHandle SWEEPVOTES;
     static {
         try {
-            UNSAFE = sun.misc.Unsafe.getUnsafe();
-            Class<?> k = LinkedTransferQueue.class;
-            headOffset = UNSAFE.objectFieldOffset
-                (k.getDeclaredField("head"));
-            tailOffset = UNSAFE.objectFieldOffset
-                (k.getDeclaredField("tail"));
-            sweepVotesOffset = UNSAFE.objectFieldOffset
-                (k.getDeclaredField("sweepVotes"));
-        } catch (Exception e) {
-            throw new Error(e);
+            Class<?> ltq = LinkedTransferQueue.class, tn = DualNode.class;
+            MethodHandles.Lookup l = MethodHandles.lookup();
+            HEAD = l.findVarHandle(ltq, "head", tn);
+            TAIL = l.findVarHandle(ltq, "tail", tn);
+            SWEEPVOTES = l.findVarHandle(ltq, "sweepVotes", int.class);
+        } catch (ReflectiveOperationException e) {
+            throw new ExceptionInInitializerError(e);
         }
     }
 }
